Corrected buttons spacing and alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,10 +16,9 @@ body {
 
 button {
   cursor: pointer;
-  margin: 0 0.625rem;
   padding: 0.5rem;
   background-color: rgb(143, 255, 143);
-  border-radius: 5%;
+  border-radius: 0.375rem;
   border: none;
   outline: none;
   &:hover {
